# dz_20.1

./: README.md  pyproject.toml
myproject/myproject/: settings.py
